--- a/about.html
+++ b/about.html
@@ -143,13 +143,14 @@
                     <div class="section-title text-start mb-5">
                         <h4 class="sub-title pe-3 mb-0">Nosotros</h4>
                         <h1 class="display-3 mb-4">Conoce a nuestra familia.</h1>
-                        <p class="mb-4 small-text">Fundada por Florinda Palacios Vega el 26/02/2015, Servicios Médicos Ocupacional Biocell ha sido un pionero
-                            en la promoción de la salud y seguridad en el entorno laboral. Desde nuestros humildes
-                            comienzos como un policonsultorio de salud ocupacional, hemos crecido y evolucionado para
-                            convertirnos en un referente en la industria, ofreciendo una amplia gama de servicios de
-                            salud ocupacional a empresas de todos los tamaños. Nuestro compromiso con la excelencia y la
-                            innovación nos ha permitido establecer relaciones duraderas con nuestros clientes y
-                            adaptarnos continuamente a las necesidades cambiantes del mercado laboral.</p>
+                        <p class="mb-4 small-text">Fundada por Florinda Palacios Vega el 26/02/2015, siendo pioneros en
+                            la promoción de la salud y seguridad en el entorno laboral. Desde nuestros humildes
+                            comienzos como un policonsultorio de salud ocupacional, hemos evolucionado para convertirnos
+                            en un referente en la industria, ofreciendo una amplia gama de servicios de salud
+                            ocupacional a pequeñas, medianas y grandes empresas de diferentes rubros. Nuestro compromiso
+                            con la excelencia y la innovación nos ha permitido establecer relaciones duraderas con
+                            nuestros clientes y adaptarnos continuamente a las necesidades cambiantes del mercado
+                            laboral.</p>
                         <!-- <div class="mb-4">
                                 <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Refresing to get such a personal touch.</p>
                                 <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Duis aute irure dolor in reprehenderit in voluptate.</p>
@@ -193,7 +194,8 @@
                     <div class="mt-5 mt-md-0">
                         <span class="contact-icon-color">Conoce nuestra</span>
                         <h2 class="display-5 fw-bold">Visión</h2>
-                        <p class="lead small-text">Nuestra visión es ser líderes en el ámbito de la salud ocupacional, reconocidos
+                        <p class="lead small-text">Nuestra visión es ser líderes en el ámbito de la salud ocupacional,
+                            reconocidos
                             por
                             nuestra excelencia, innovación y compromiso con la seguridad y bienestar de los
                             trabajadores. Aspiramos a establecer un estándar de referencia en la
@@ -225,8 +227,10 @@
                         <div class="col-lg-6">
                             <div class="d-flex">
                                 <div class="text-primary me-4">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor"
+                                        class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
                                     </svg>
                                 </div>
                                 <div>
@@ -240,9 +244,11 @@
                         <div class="col-lg-6">
                             <div class="d-flex">
                                 <div class="text-primary me-4">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
-                                        <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a2 2 0 0 0-.453-.618A5.98 5.98 0 0 1 2 6m3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor"
+                                        class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a2 2 0 0 0-.453-.618A5.98 5.98 0 0 1 2 6m3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5" />
+                                    </svg>
                                 </div>
                                 <div>
                                     <h5 class="mb-2 mb-lg-4 fw-bold">Innovación</h5>
@@ -255,9 +261,11 @@
                         <div class="col-lg-6">
                             <div class="d-flex">
                                 <div class="text-primary me-4">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor" class="bi bi-hand-thumbs-up-fill" viewBox="0 0 16 16">
-                                        <path d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a10 10 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733q.086.18.138.363c.077.27.113.567.113.856s-.036.586-.113.856c-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.2 3.2 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.8 4.8 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor"
+                                        class="bi bi-hand-thumbs-up-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a10 10 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733q.086.18.138.363c.077.27.113.567.113.856s-.036.586-.113.856c-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.2 3.2 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.8 4.8 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z" />
+                                    </svg>
                                 </div>
                                 <div>
                                     <h5 class="mb-2 mb-lg-4 fw-bold">Integridad</h5>
@@ -270,9 +278,11 @@
                         <div class="col-lg-6">
                             <div class="d-flex">
                                 <div class="text-primary me-4">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor" class="bi bi-person-badge-fill" viewBox="0 0 16 16">
-                                        <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2zm4.5 0a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1zM8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6m5 2.755C12.146 12.825 10.623 12 8 12s-4.146.826-5 1.755V14a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1z"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor"
+                                        class="bi bi-person-badge-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2zm4.5 0a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1zM8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6m5 2.755C12.146 12.825 10.623 12 8 12s-4.146.826-5 1.755V14a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1z" />
+                                    </svg>
                                 </div>
                                 <div>
                                     <h5 class="mb-2 mb-lg-4 fw-bold">Centrados en el cliente</h5>
@@ -285,9 +295,11 @@
                         <div class="col-lg-6">
                             <div class="d-flex">
                                 <div class="text-primary me-4">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
-                                        <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor"
+                                        class="bi bi-gear-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
+                                    </svg>
                                 </div>
                                 <div>
                                     <h5 class="mb-2 mb-lg-4 fw-bold">Trabajo en Equipo</h5>
@@ -300,9 +312,11 @@
                         <div class="col-lg-6">
                             <div class="d-flex">
                                 <div class="text-primary me-4">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor" class="bi bi-shield-fill" viewBox="0 0 16 16">
-                                        <path d="M5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.8 11.8 0 0 1-2.517 2.453 7 7 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7 7 0 0 1-1.048-.625 11.8 11.8 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 63 63 0 0 1 5.072.56"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor"
+                                        class="bi bi-shield-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.8 11.8 0 0 1-2.517 2.453 7 7 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7 7 0 0 1-1.048-.625 11.8 11.8 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 63 63 0 0 1 5.072.56" />
+                                    </svg>
                                 </div>
                                 <div>
                                     <h5 class="mb-2 mb-lg-4 fw-bold">Seguridad y Prevención</h5>
@@ -315,9 +329,11 @@
                         <div class="col-lg-6">
                             <div class="d-flex">
                                 <div class="text-primary me-4">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
-                                        <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor"
+                                        class="bi bi-people-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
+                                    </svg>
                                 </div>
                                 <div>
                                     <h5 class="mb-2 mb-lg-4 fw-bold">Responsabilidad Social</h5>
@@ -330,9 +346,11 @@
                         <div class="col-lg-6">
                             <div class="d-flex">
                                 <div class="text-primary me-4">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor" class="bi bi-arrow-up-right-circle-fill" viewBox="0 0 16 16">
-                                        <path d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8m5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707z"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="currentColor"
+                                        class="bi bi-arrow-up-right-circle-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8m5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707z" />
+                                    </svg>
                                 </div>
                                 <div>
                                     <h5 class="mb-2 mb-lg-4 fw-bold">Desarrollo Continuo</h5>
